<resources>
    <string name="app_name">ECos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <!-- tab 开始-->
    <string name="tab_course">教程</string>
    <string name="tab_community">活动</string>
    <string name="tab_transaction">招募</string>
    <string name="tab_home">主页</string>
    <string name="tab_display">分享</string>
    <!-- tab 结束-->

    <!-- 侧滑栏开始 -->
    <string name="drawer_title">我是侧滑栏</string>

    <string name="title_section1">我的消息</string>
    <string name="title_section2">我的等级</string>
    <string name="title_section3">我的教程</string>
    <string name="title_section4">我的作品</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="noPage">该页面正在施工中 QAQ </string>
    <!-- 侧滑栏结束 -->

    <!-- xListView(下拉上拉控件)开始-->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <string name="xlistview_readmore">查看更多c</string>
    <!-- xListView(下拉上拉控件)结束-->

    <!-- 个人作品详情页面-->
    <string name="comment_hint">请写下你的评论吧 &gt;w&lt;</string>
    <string name="favour">点赞</string>
    <string name="cancelFavor">已赞</string>
    <string name="favorCount">个赞</string>
    <string name="focus">已关注</string>
    <string name="notFocus">关注</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_course_detail">CourseDetailActivity</string>
    <string name="title_activity_course_detail_upload">CourseDetailUploadActivity</string>

    <!-- 活动详情页面 -->
    <string name="tag_event_detail">同人展</string>
    <string name="title_event_detail">西南COSPLAY超级盛典</string>
    <string name="location_event_detail">成都 武侯区</string>
    <string name="price_event_detail">¥45</string>
    <string name="detail_location_event_detail">成都 武侯区 动漫广场1号展厅</string>
    <integer name="line_num_event_detail">3</integer>
    <string name="time_event_detail">2015年7月20日-2015年7月24日 10:00-14:00</string>
    <string name="detail_event_detail">我是一段关于本次活动的说明，我有很多字，我一定要超过三行，一定的啊，要不然界面会显得空旷啊，所以我要加油，誓要超越三行</string>
    <string name="contact_event_detail">联系方式</string>
    <string name="QQ_event_detail">企鹅群：970020010</string>
    <string name="weibo_event_detail">微博：www.weibo.com/cosplay</string>

    <!-- 个人信息页面 -->
    <string name="bt_personage_name_default">玉生烟</string>
    <string name="tv_personage_gender_default">女</string>
    <string name="tv_personage_attention">关注</string>
    <string name="tv_personage_attention_default">632</string>
    <string name="tv_personage_fans">粉丝</string>
    <string name="tv_personage_fans_default">535</string>
    <string name="tv_personage_description_default">妹控什么的冲我来吧</string>
    <string name="bt_personage_setting">设置</string>
    <string name="tv_schedule_set_default">课表集(2)</string>
    <string name="tv_course_name_default">教程名称</string>
    <string name="bt_personage_attention">+关注</string>
    <string name="bt_personage_inbox">私信</string>
    <string name="bt_personage_return">返回</string>
    <string name="tv_personage_tag1">后期君</string>
    <string name="tv_personage_tag2">Coser</string>
    <string name="tv_personage_tag3">妆娘</string>
    <string name="tv_personage_tag4">摄影湿</string>
    <string name="tv_personage_tag5">中二病</string>

    <!-- 个人作品分享页面-->
    <string name="work_hint">分享一下心得吧:)</string>
    <string name="title_activity_event_detail">EventDetailActivity</string>
    <string name="comment">评论</string>
    <string name="alreadyLastAssignment">已经到最后一个作品！</string>
    <string name="alreadyFirstAssignment">已经到第一个作品！</string>
    <string name="loadingNextAssignment">即将为你加载下一个作品</string>
    <string name="loadingLastAssignment">即将为你加载上一个作品</string>
    <string name="noWeixin">小编还未实现该接口，一定好好鞭策程序猿!尽请期待:)</string>

    <!-- 个人上传作品页面（多个作品）-->
    <string name="uploadWorks_coverHint">给作品起个名字让别人更容易找到你</string>
    <string name="workDescrp_hint">作品描述</string>
    <string name="add_workDescrp_hint">添加作品描述~ </string>
    <string name="title_activity_category_display">CategoryDisplayActivity</string>
    <string name="title_activity_personage_detail">PersonageDetailActivity</string>
    <string name="manyFavor">个赞</string>
    <string name="manyComment">条评论</string>
    <string name="page">张</string>
    <string name="manyAssignment">个网友作品</string>
    <string name="tag">作品标签</string>


    <!-- CourseType-->
    <string name="makeuper">妆娘</string>
    <string name="prop">道具</string>
    <string name="hair">假发</string>
    <string name="costume">服装</string>
    <string name="photography">摄影</string>
    <string name="backstage">后期</string>
    <string name="others">其他</string>
    <string name="experience">心得</string>
    <string name="title_activity_recruitment_detail">RecruitmentDetailActivity</string>
    <string name="noCourse">抱歉，还没有该分类的教程，快来试试发布教程吧;)</string>
    <string name="nothingLeft">到底了~~</string>


    <!-- 活动页面-->
    <string name="activity_name">活动名称</string>
    <string name="type">分类</string>
    <string name="location">位置</string>
    <string name="address">详细地址</string>
    <string name="time">时间</string>
    <string name="day">日期</string>
    <string name="expense">费用</string>
    <string name="contact">添加联系方式</string>
    <string name="contactDetail">联系号码</string>
    <string name="activity_description">活动简介</string>
    <string name="to">至</string>
    <string name="rmb">元</string>
    <string name="title_activity_personage_share_fragment">PersonageShareFragment</string>
    <string name="title_activity_personal_info_setting">PersonalInfoSettingActivity</string>
    <string name="alreadyGo">已参加</string>
    <string name="notGo">想参加</string>
    <string name="realiseActivitySuccessfully">发布活动成功:)</string>
    <string name="beginDate">开始日期</string>
    <string name="endDate">结束日期</string>
    <string name="beginTime">开始时间</string>
    <string name="endTime">结束时间</string>
    <string name="feeHint">请填写费用:)</string>
    <string name="RMB">￥ </string>

    <!-- 个人单个作品上传页面-->
    <string name="notFinished">请填写分享内容:)</string>
    <string name="uploadAssignmentSuccessfully">上传作品成功;)</string>
    <string name="alreadyTop">已经置顶，不能上移</string>
    <string name="alreadyBottom">已经置底，不能下移</string>
    <string name="uploadDisplaySuccessfully">上传分享成功</string>
    <!-- 发布招募页面-->
    <string name="avgPrice">均价</string>
    <string name="recruitmentTitle">设置价格和封面作品</string>
    <string name="auction">挂牌</string>
    <string name="instruction">说明</string>
    <string name="chooseCover">选择封面作品</string>
    <string name="notAlreadyFinished">请填写完所有数据;)</string>
    <string name="uploadSuccessfully">挂牌成功:)</string>
    <string name="KM">千米</string>
    <string name="noLocation">小编还在调bug，暂未完成该功能:)</string>
    <string name="noRecruit">暂未查询到该类别的招募信息哦</string>
    <!-- 评论页面-->
    <string name="noComment">请填写评论;)</string>
    <string name="commentSuccess">评论发送成功:)</string>
    <string name="side_notification">我的消息</string>
    <string name="side_contact">我的私信</string>
    <string name="side_course">我的教程</string>
    <string name="side_display">我的分享</string>
    <string name="side_activity">我的活动</string>
    <string name="side_recruite">招募挂牌</string>
    <string name="side_setting">设置</string>
    <string name="side_person">个人中心</string>
    <string name="notification_attention">关注了你</string>
    <string name="allComment">全部</string>
    <string name="seeAllComment">查看全部评论</string>

    <!--  分享页面-->
    <string name="noShare">抱歉，还没有该分类的分享，快来分享吧;)</string>
    <!-- 搜索页面-->
    <string name="noContent">请输入搜索关键字:)</string>
    <string name="title_upload_title">标题</string>
    <string name="title_upload_detail">简介</string>
    <string name="loadMore">正在为你努力加载内容哦，亲:)</string>
    <string name="noOtherShare">暂未查到该人的作品</string>
    <string name="uploading">正在上传中</string>
    <string name="loading">正在加载中</string>

    <!-- 个人信息修改页面-->
    <string name="personalInformationLoadError">个人信息修改失败</string>

    <!-- 注册-->
    <string name="aplash_choose_icon">设置你的头像，让好友更容易找到你</string>
    <string name="aplash_name">请输入你的昵称</string>
    <string name="aplash_password">8-16位字符，区分大小写</string>
    <string name="aplash_complete">完成</string>
    <string name="aplash_phone">请输入你的手机号</string>
    <string name="aplash_password2">请输入你的登录密码</string>
    <string name="aplash_login">登录</string>
    <string name="aplash_forget">忘记密码？</string>
    <string name="aplash_newpassword">请设置你的新密码</string>
    <string name="search_search">搜索你喜爱的动漫和角色</string>
    <string name="aplash_code">获取验证码</string>
    <string name="course_allevalution">查看全部120条评论</string>
    <string name="aplash_code_notification">验证码已发送，请在五分钟内完成注册</string>
    <string name="e_loading">E君正在努力加载中~</string>
    <string name="null_id">id为null</string>
    <string name="noSignature">这家伙很懒，什么都没留下</string>
</resources>
