<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/include_title"
        layout="@layout/component_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/uploadWorksCoverImgVw"
                android:layout_width="match_parent"
                android:layout_height="@dimen/workDetail_ImgVw_height"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/makeuper_cb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/makeuper" />

                <CheckBox
                    android:id="@+id/prop_cb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/prop" />

                <CheckBox
                    android:id="@+id/photography_cb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/photography" />

                <CheckBox
                    android:id="@+id/backstage_cb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/backstage" />

                <CheckBox
                    android:id="@+id/costume_cb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/costume" />

                <CheckBox
                    android:id="@+id/other_cb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/others" />

            </LinearLayout>

            <EditText
                android:id="@+id/uploadWorksCoverEdTx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/uploadWorks_coverHint"
                android:textSize="@dimen/textSize" />

            <EditText
                android:id="@+id/uploadWorksDescrpEdTx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/workDescrp_hint"
                android:textSize="@dimen/textSize" />

            <com.netease.ecos.views.ExtensibleListView
                android:id="@+id/uploadWorksLsVw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:dividerHeight="@dimen/divider_height" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>