<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ecos="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.netease.ecos.activity.PersonageDetailActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="230dp">
        <LinearLayout
            android:id="@+id/lly_left_action"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:contentDescription="标题左侧按钮，含图标和按钮，根据需要进行显示和隐藏，并更改名称"
            android:minWidth="80dp"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp">

            <include
                android:id="@+id/iv_left"
                layout="@layout/component_left_arrow" />

            <TextView
                android:id="@+id/tv_left"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/iv_left"
                android:background="@null"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="返回"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <com.netease.ecos.utils.RoundImageView
                    android:id="@+id/iv_personage_portrait"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/img_default_portrait"
                    ecos:showable="true"
                    ecos:circle_color="#00ff00"
                    ecos:line_width="4.0"/>
                <com.netease.ecos.utils.RoundImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/riv_personage_gender"
                    android:background="@drawable/img_gender_famale"
                    android:layout_centerHorizontal="true"
                    android:layout_toRightOf="@id/iv_personage_portrait"
                    android:layout_alignBottom="@id/iv_personage_portrait"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_personage_portrait"
                    android:gravity="center"
                    android:id="@+id/ll_personage_name"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bt_personage_name_default"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/bt_personage_name" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ll_personage_name"
                    android:id="@+id/ll_personage_tag"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_personage_info_num"
                        android:gravity="center"
                        android:padding="2dp"
                        android:layout_margin="2dp"
                        android:text="@string/tv_personage_tag1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:layout_margin="2dp"
                        android:background="@drawable/bg_personage_info_num"
                        android:text="@string/tv_personage_tag2"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:layout_margin="2dp"
                        android:background="@drawable/bg_personage_info_num"
                        android:text="@string/tv_personage_tag4"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ll_personage_tag"
                    android:gravity="center"
                    android:id="@+id/ll_personage_attention"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/tv_personage_attention_default"
                        android:id="@+id/tv_personage_attention" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/tv_personage_fans_default"
                        android:id="@+id/tv_personage_fans" />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tv_personage_description_default"
                    android:id="@+id/tv_personage_description"
                    android:gravity="center"
                    android:layout_below="@id/ll_personage_attention" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_below="@id/tv_personage_description"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/bt_attention"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/bg_radius_red_trans"
                        android:text="@string/bt_personage_attention"
                        android:gravity="center" />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/bt_inbox"
                        android:layout_marginLeft="10dp"
                        android:text="@string/bt_personage_inbox"
                        android:background="@drawable/bg_radius_red_trans"
                        android:gravity="center" />

                </LinearLayout>

                <!--<Button-->
                <!--android:layout_width="70dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/bt_personage_return"-->
                <!--android:id="@+id/bt_personage_return"-->
                <!--android:background="#ddddff88"-->
                <!--android:layout_alignTop="@+id/iv_personage_portrait"-->
                <!--android:layout_alignParentLeft="true"-->
                <!--android:layout_alignParentStart="true" />-->
            </RelativeLayout>

        </LinearLayout>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:background="@mipmap/bg_top_switch_bar_item"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="4">

            <RadioButton
                android:id="@+id/radio_1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/tab_course"
                style="@style/rb_chat_list_tab"/>

            <RadioButton
                android:id="@+id/radio_2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/tab_community"
                style="@style/rb_chat_list_tab"/>

            <RadioButton
                android:id="@+id/radio_3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/tab_transaction"
                style="@style/rb_chat_list_tab"/>
            <RadioButton
                android:id="@+id/radio_4"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/tab_display"
                style="@style/rb_chat_list_tab"/>
        </RadioGroup>
        <TextView
            android:layout_width="0dp"
            android:background="@mipmap/bg_top_switch_bar_item"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tab"/>


</LinearLayout>
