<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.netease.ecos.activity.EventDetailActivity">

    <include
        android:id="@+id/include_title"
        layout="@layout/component_title" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- 正式内容 -->
        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="160dp">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="130dp"
                    android:id="@+id/iv_event_cover"
                    android:src="@drawable/event_detail_cover"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_event_coverTag"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="100dp"
                    android:gravity="center"
                    android:text="@string/tag_event_detail"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/title_event_detail"
                    android:id="@+id/tv_event_title"
                    android:layout_marginLeft="150dp"
                    android:layout_marginTop="40dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/location_event_detail"
                    android:id="@+id/tv_event_location"
                    android:layout_marginLeft="180dp"
                    android:layout_marginTop="80dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/price_event_detail"
                    android:id="@+id/tv_event_price"
                    android:layout_marginLeft="180dp"
                    android:layout_marginTop="110dp" />
            </FrameLayout>
            <!-- 间隔 -->
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <!-- 详细信息区 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:orientation="horizontal">
                <!-- 左侧间隔 -->
                <View
                    android:layout_width="40dp"
                    android:layout_height="match_parent" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_event_location_detail"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/detail_location_event_detail"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/line_grey"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_event_time_detail"
                        android:text="@string/time_event_detail"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/line_grey"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_event_contant_detail"
                        android:lines="@integer/line_num_event_detail"
                        android:layout_gravity="start"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/detail_event_detail"/>

                </LinearLayout>
                <!-- 右侧间隔 -->
                <View
                    android:layout_width="40dp"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_event_contact"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/contact_event_detail"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/line_cyan"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <!-- 左侧间隔 -->
                <View
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:id="@+id/tv_event_non_left"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/detail_location_event_detail"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/line_grey"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/QQ_event_detail"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/line_grey"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/weibo_event_detail"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/line_grey"/>

                </LinearLayout>
                <!-- 右侧间隔 -->
                <View
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:id="@+id/tv_event_non_right"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
